overview prices issues with text wrapping v2.0

--- a/src/app/prices/overview-prices/overview-prices.component.css
+++ b/src/app/prices/overview-prices/overview-prices.component.css
@@ -46,7 +46,7 @@
 
 .table-with-dates-date-cell {
   padding-right: 10px;
-  white-space: initial;
+  white-space: inherit;
 }
 
 .table-with-prices-price-cell {
